# Lima-camera-perkinelmer

./: .gitlab-ci.yml  CMakeLists.txt  README.md  install.bat  pom.xml
cmake/: FindXISL.cmake
conda/camera/: meta.yaml
conda/tango/: meta.yaml
doc/: index.rst  tango.rst
include/: PerkinElmerBinCtrlObj.h  PerkinElmerCompatibility.h  PerkinElmerDetInfoCtrlObj.h  PerkinElmerInterface.h  PerkinElmerSyncCtrlObj.h
python/: __init__.py
sdk/msvc/include/: Acq.h
sdk64/3.3.2.7/: Acq.h  XISL.lib
sdk64/33.7.206/: Acq.h  README.txt  XISL.lib
sip/: PerkinElmerInterface.sip
src/: PerkinElmerBinCtrlObj.cpp  PerkinElmerDetInfoCtrlObj.cpp  PerkinElmerInterface.cpp  PerkinElmerSyncCtrlObj.cpp
tango/: CMakeLists.txt  PerkinElmer.py
